<resources>
    <string name="app_name">Dial A Cop</string>
    <string name="dial100">Dial 100</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="polic_station_contacts">Police Station</string>
    <string name="important_contacts">Important Contacts</string>
    <string-array name="chooseDistrict">
        <item>Choose District</item>
        <item>Bokaro</item>
        <item>Dhanbad</item>
        <item>Ranchi</item>
        <item>Dumka</item>
        <item>Garhwa</item>
        <item>Chatra</item>
        <item>Deoghar</item>
        <item>Hazaribagh</item>
        <item>Jamtara</item>
        <item>Khunti</item>
        <item>Giridih</item>
        <item>Godda</item>
        <item>Gumla</item>
        <item>Pakur</item>
        <item>Palamu</item>
        <item>Ramgarh</item>
        <item>Koderma</item>
        <item>Latehar</item>
        <item>Lohardaga</item>
        <item>Simdega</item>
        <item>East Singhbhum</item>
        <item>West Singhbhum</item>
        <item>Sahibganj</item>
        <item>Saraikela</item>
    </string-array>
    <string-array name="bokaro_district_police_stations">
        <item>oc sc-st</item>
        <item>oc penk narayanpur</item>
        <item>oc jageswar vihar</item>
        <item>oc chattrochati</item>
        <item>balidih biyada op</item>
        <item>b.t.p.s. ps</item>
        <item>gandhinagar ps</item>
        <item>mahuatand ps</item>
        <item>tenughat op</item>
        <item>mahila ps</item>
        <item>bhojudih ps</item>
        <item>sector-6 ps</item>
        <item>bokaro jharia op</item>
        <item>bermo ps</item>
        <item>petarwar ps</item>
        <item>amlabad op</item>
        <item>bangaria op</item>
        <item>barmasia op</item>
        <item>b.s. city ps</item>
        <item>chas ps</item>
        <item>siyaljory ps</item>
        <item>sector-12 ps</item>
        <item>marafari ps</item>
        <item>i.e.l. ps</item>
        <item>nawadih ps</item>
        <item>pindrajora ps</item>
        <item>sector-4 ps</item>
        <item>harla ps</item>
        <item>chas (m) ps</item>
        <item>chandankiyari ps</item>
        <item>gomia ps</item>
        <item>lalpania op</item>
        <item>jaridih ps</item>
        <item>kasmar ps</item>
        <item>kathara op</item>
        <item>balidih ps</item>
        <item>dugdha ps</item>
        <item>chandrapura ps</item>

    </string-array>
    <string-array name="chatra_police_stations">
        <item>sadar ps</item>
        <item>simariya ps</item>
        <item>lawalong ps</item>
        <item>rajpur ps</item>
        <item>gidhaur ps</item>
        <item>piparwar ps</item>
        <item>tandwa ps</item>
        <item>pratappur</item>
        <item>pathalgadda</item>
        <item>kunda ps</item>
        <item>itkhori ps</item>
        <item>hunterganj ps</item>
        <item>bashishtnagar ps (jori)</item>
    </string-array>
    <string-array name="deoghar_police_stations">
        <item>margomunda ps</item>
        <item>devipur ps</item>
        <item>babamandir ps</item>
        <item>mahila ps</item>
        <item>chitra ps</item>
        <item>palajori ps</item>
        <item>sarth ps</item>
        <item>karoon ps</item>
        <item>madhupur ps</item>
        <item>sonaraydhari ps</item>
        <item>sarwa ps</item>
        <item>mohanpur ps</item>
        <item>town ps (deoghar)</item>
        <item>kunda ps (deoghar)</item>
        <item>jasidih ps</item>
    </string-array>
    <string-array name="dhanbad_police_stations">
        <item>ghanuadih op</item>
        <item>gonudih op</item>
        <item>kharkhari op</item>
        <item>bhatdih op</item>
        <item>traffic ps</item>
        <item>borragarh op</item>
        <item>angar pathira op</item>
        <item>east basuriya op</item>
        <item>purbi tundi ps</item>
        <item>maniyadih ps</item>
        <item>chirkunda ps</item>
        <item>dhanuadih op</item>
        <item>lodna op</item>
        <item>munidih op</item>
        <item>bhagabandh op</item>
        <item>goushala op</item>
        <item>bhuli op</item>
        <item>maithan op</item>
        <item>pancheat op</item>
        <item>galfarbari op</item>
        <item>dharmabandh op</item>
        <item>ramkanali op</item>
        <item>sonardih op</item>
        <item>tisra ps</item>
        <item>mahuda ps</item>
        <item>madhuban ps</item>
        <item>kenduadih ps</item>
        <item>bankmore ps</item>
        <item>bhonra op</item>
        <item>saraidhela ps</item>
        <item>jogta ps</item>
        <item>loyabod ps</item>
        <item>putki ps</item>
        <item>dhansar ps</item>
        <item>kumardhubi op</item>
        <item>nirsa ps</item>
        <item>patherdih ps</item>
        <item>sudamdih ps</item>
        <item>alakhadiha op</item>
        <item>jorapokhar ps</item>
        <item>baliapur ps</item>
        <item>sindri ps</item>
        <item>tetulmari ps</item>
        <item>barora ps</item>
        <item>rajganj op</item>
        <item>katras ps</item>
        <item>baghmara ps</item>
        <item>hariharpur ps</item>
        <item>topchanchi ps</item>
        <item>barwadda ps</item>
        <item>tundi ps</item>
        <item>govindpur ps</item>

    </string-array>
    <string-array name="dumka_police_stations">
        <item>muffassil ps</item>
        <item>shikaripara ps</item>
        <item>town ps</item>
        <item>gopikandar ps</item>
        <item>kathikund ps</item>
        <item>saraiya hat ps</item>
        <item>jama ps</item>
        <item>raneshwar ps</item>
        <item>masliya ps</item>
        <item>tongra ps</item>
        <item>jarmundih ps</item>
        <item>ramgarh ps (dumka)</item>
        <item>hansdiha ps</item>
        <item>taljhari ps</item>
        <item>masanjor op</item>
    </string-array>
    <string-array name="eastsinghbhum_police_stations">
        <item>galudih</item>
        <item>mango ps</item>
        <item>sonari ps</item>
        <item>burmamines ps</item>
        <item>kadma ps</item>
        <item>parsudih ps</item>
        <item>sspur</item>
        <item>sundarnagar ps</item>
        <item>birsanagar ps</item>
        <item>govindpur ps (jsr)</item>
        <item>boram</item>
        <item>azadnagar ps</item>
        <item>telco</item>
        <item>jugsalai ps</item>
        <item>sidhgora ps</item>
        <item>sitaramdera ps</item>
        <item>golmuri ps</item>
        <item>olidih op</item>
        <item>moubhandar op</item>
        <item>dhalbhumgarh ps</item>
        <item>bahragora ps</item>
        <item>bagbera</item>
        <item>ghatshila ps</item>
        <item>dumaria ps</item>
        <item>potka ps</item>
        <item>gurubanda ps</item>
        <item>jadugora ps</item>
        <item>chakulia</item>
        <item>kamalpur</item>
        <item>musabani</item>
        <item>patamda ps</item>
        <item>barsol ps</item>
        <item>mgm ps</item>
        <item>sakchi ps</item>
        <item>bistupur ps</item>
    </string-array>
    <string-array name="garhwa_police_stations">
        <item>mahila thana</item>
        <item>bardiha</item>
        <item>bishunpura</item>
        <item>ketar</item>
        <item>danda</item>
        <item>bhandaria ps</item>
        <item>nagar untari ps</item>
        <item>hariharpur op</item>
        <item>kharondih ps</item>
        <item>ramna ps</item>
        <item>dandai ps</item>
        <item>ramkanda ps</item>
        <item>chinia ps</item>
        <item>dhurki ps</item>
        <item>manjhion ps</item>
        <item>bhawnathpur ps</item>
        <item>meral ps</item>
        <item>kandi ps</item>
        <item>ranka ps</item>
        <item>garhwa ps</item>
    </string-array>
    <string-array name="giridih_police_stations">
        <item>navdiha op</item>
        <item>parsan op</item>
        <item>madhuban op</item>
        <item>khukhra</item>
        <item>dumri ps</item>
        <item>town ps (giridih)</item>
        <item>lokai nayanpur ps</item>
        <item>taratand ps</item>
        <item>bhelwaghati ps</item>
        <item>deori ps</item>
        <item>gawan ps</item>
        <item>tisri ps</item>
        <item>pirtand ps</item>
        <item>nimiaghat ps</item>
        <item>birni ps</item>
        <item>bagodar ps</item>
        <item>sariya ps</item>
        <item>dhanwar ps</item>
        <item>hirodih ps</item>
        <item>jamua ps</item>
        <item>bengabad ps</item>
        <item>ahilyapur ps</item>
        <item>gandey ps</item>
        <item>muffasil ps</item>
    </string-array>
    <string-array name="godda_police_stations">
        <item>rajabhitha</item>
        <item>hanwara ps</item>
        <item>boarijore ps</item>
        <item>belbadda ps</item>
        <item>mahagama ps</item>
        <item>poraiyahat ps</item>
        <item>muffasil ps (godda)</item>
        <item>town ps (godda)</item>
        <item>thakur gangti ps</item>
        <item>meharma ps</item>
        <item>lalmatia ps</item>
        <item>basantrai op</item>
        <item>pathargama ps</item>
        <item>deodand ps</item>
        <item>dunderpahari ps</item>
    </string-array>
    <string-array name="gumla_police_stations">
        <item>sisai ps</item>
        <item>basia ps</item>
        <item>gumla ps</item>
        <item>raidih ps</item>
        <item>palkot ps</item>
        <item>kamdara ps</item>
        <item>ghaghra ps</item>
        <item>dumri ps (gumla)</item>
        <item>chainpur ps</item>
        <item>bharno ps</item>
        <item>bishunpur ps</item>
    </string-array>
    <string-array name="hazaribagh_police_stations">
        <item>fire brigade</item>
        <item>daru ps</item>
        <item>mahila thana n sc-st thana</item>
        <item>tatijhariya ps</item>
        <item>bishnugarh ps</item>
        <item>urimari op</item>
        <item>ichak ps</item>
        <item>churchu ps</item>
        <item>charhi ps</item>
        <item>giddi ps</item>
        <item>padma op</item>
        <item>chauparan ps</item>
        <item>gorhar ps</item>
        <item>barkatha ps</item>
        <item>barhi ps</item>
        <item>keredari ps</item>
        <item>barkagaon ps</item>
        <item>katkamsandi ps</item>
        <item>pelawal op</item>
        <item>sadar ps (hazaribagh)</item>
        <item>muffasil ps (hazaribagh)</item>
    </string-array>
    <string-array name="jamtara_police_stations">
        <item>mahila ps-sc-st ps</item>
        <item>karmatar ps</item>
        <item>fatehpur ps</item>
        <item>bagdheri ps</item>
        <item>bindapathar ps</item>
        <item>mihijam ps</item>
        <item>nala ps</item>
        <item>kundhit ps</item>
        <item>narayanpur ps</item>
        <item>jamtara ps</item>
    </string-array>
    <string-array name="khunti_police_stations">
        <item>tapakara op</item>
        <item>karra ps</item>
        <item>rania ps</item>
        <item>torpa ps</item>
        <item>arki ps</item>
        <item>khunti ps</item>
        <item>murhu ps</item>
    </string-array>
    <string name="dummy_button">close</string>
    <string name="dummy_content">.</string>
    <string name="disclaimer">DialACop Jharkhand Police Android Application is developed for providing information regarding all contact details of jharkhand state\'s police departments. All contacts available in this application are taken from Jharkhand Police official website http://www.jhpolice.gov.in If anything getting wrong in this application, then please check out the official website too. We will try to keep updated as much we can.</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>